# easy-kontrol-x1-driver

./: .gitignore  Cargo.toml  MACOS_SETUP.md  README.md  board.yml  bundle.sh  entitlements.plist
AI instructions/: SESSION_HANDOFF.md
DJayPro mapping/: EASY KONTROL X1 1.djayMidiMapping  MAPPING_MANUAL.md
logo/: Easy KONTROL X1 Driver.icns
src/: hid_device.rs  main.rs  menu_bar.rs  utils.rs  x1_board.rs  x1_process.rs  x1_process_hid.rs
