[package]
name = "easy_kontrol_x1"
version = "1.1.4"
edition = "2021"
description = "Easy KONTROL X1 Driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.9.1"
rusb = "0.9"
hidapi = "2.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
system_status_bar_macos = "0.1.3"
cocoa = "0.25"
objc = "0.2"

[package.metadata.bundle]
name = "Easy KONTROL X1 Driver"
identifier = "com.easykontrol.x1driver"
icon = ["logo/Easy KONTROL X1 Driver.icns"]
category = "public.app-category.music"
resources = ["board.yml", "logo/18x18.png", "logo/36x36.png"]

[package.metadata.bundle.osx_info_plist]
LSUIElement = true
